--- a/app-to-phone-java/app-to-phone/app/src/main/res/layout/activity_main.xml
+++ b/app-to-phone-java/app-to-phone/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
-        tools:context=".MainActivity">
+        tools:context=".apptophone.MainActivity">
 
     <TextView
             android:id="@+id/connectionStatusTextView"
