--- a/app-to-phone-java/app-to-phone/app/src/main/res/layout/activity_main.xml
+++ b/app-to-phone-java/app-to-phone/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,11 @@
             tools:text="Connection status"/>
 
     <Button
-            android:id="@+id/makeCallButton"
+            android:id="@+id/startCallButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:text="Make phone call"
+            android:text="Start call"
             android:visibility="gone"
             tools:visibility="visible"/>
 
